--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root class="h-dvh flex flex-col"></app-root>
 </body>
 </html>
