--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="bg-slate-100">
   <app-root class="h-dvh flex flex-col"></app-root>
 </body>
 </html>
